# stockedge

./: .env.example  .gitignore  .replit  ALPHA_VANTAGE_SETUP.md  ALTERNATIVE_APIS.md  API_FIX_SUMMARY.md  BUG_FIX_COMPLETE.md  BUG_REPORT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FLOW.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_QUICK_START.md  DESIGN_OVERVIEW.md  ENHANCED_FEATURES_ROADMAP.md  FINAL_DEPLOYMENT_STEPS.md  FIX_SUMMARY.md  GET_STARTED.md  GITHUB_SETUP.md  GUIDES_SUMMARY.md  HOW_IT_WORKS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  MULTI_API_SETUP.md  PHASE_2_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  RATE_LIMITING_GUIDE.md  REACT_FASTAPI_SETUP.md  README.md  ROOT_FILES_GUIDE.md  SCREENER_FEATURES_ADDED.md  START_HERE.md  TROUBLESHOOTING.md  UI_DESIGN.md  UI_QUICK_START.md  UI_REDESIGN_SUMMARY.md  app.py  (+8 more)
.streamlit/: config.toml
attached_assets/: Pasted-Stock-Market-Analysis-Platform-Comprehensive-Overview-Project-Description-We-ve-developed-a-soph-1744006090650.txt  Pasted-To-make-your-stock-prediction-system-more-robust-and-accurate-you-can-blend-technical-indicat-1744008016943.txt
pages/: 1_Chart_Analysis.py  2_Technical_Indicators.py  3_Prediction_Models.py  4_Price_Alerts.py  5_Financial_Metrics.py  6_Company_Info.py  7_Shareholding.py  8_Peers.py
utils/: chart_helpers.py  data_fetcher.py  market_regime.py  prediction_models.py  price_alerts.py  request_throttler.py  technical_indicators.py  ui_helpers.py
